# MPVPlayer

./: CMakeLists.txt  README.md  main.cpp  mpvplayer.cpp  mpvplayer.h
